[tool.poetry]
name = "codex-analytics"
version = "0.1.0"
description = ""
authors = ["nikolasschriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27"
streamlit = "^1.15"
matplotlib = "^3.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
